[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "outline-vpn-api"
dynamic = ["version"]
description = "Python API wrapper for Outline VPN"

dependencies = [
    "requests",
    "packaging"
]

keywords = [
    "outline",
    "vpn",
    "api",
    "wrapper",
    "rest",
]

authors = [
    { name = "Jorge Alberto Díaz Orozco (Akiel)", email = "diazorozcoj@gmail.com" },
]

maintainers = [
    { name = "Jorge Alberto Díaz Orozco (Akiel)", email = "diazorozcoj@gmail.com" },
]

readme = "README.md"
license = "MIT"

[project.urls]
Homepage = "https://github.com/jadolg/outline-vpn-api"
Issues = "https://github.com/jadolg/outline-vpn-api/issues"

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = false

[tool.black]
